# raspi_matrix_app

./: .env1  .gitignore  APP_TO_DO.md  Book1.xlsx  DEPLOY_PI.md  GPTdailysummaries.md  README.md  Tasks  app.py  check_planned.py  check_tables.py  init_db-MLT-23-157-02-37513.py  init_db.py  matrixapp_v2.db  plc document  pyproject.toml  requirements.txt
DocumentationNotes/: Done.md  TODO.md
documentation/: Architecure.md  PLC_READING.md  STATEMANAGING.md  TroubleShooting and Routing guide  overview.md
shift_manager_frontend/: package-lock.json  package.json  vite.config.js
shift_manager_frontend/src/: App.css  App.jsx  HistoryDayView.jsx  main.jsx  shiftManager.jsx
src/: __init__.py  config.py  db-MLT-22-130.py  db.py  globals.py  he.txt  plc.py
src/routes/: api.py  auth.py  details.py  edit_shift.py  end_shift.py  extendShift.py  history.py  homescreen.py  init_db_routes.py  plan.py  record-MLT-22-130.py  record.py  route_manager.py  static_pages.py
src/services/: analytics-MLT-22-130.py  analytics.py  cache.py  plc_read.py  state_logic.py  time_utils.py  validation.py
src/static/: convertUtcToLocal.js  main.css
src/templates/: base.html  clear_local.html  edit_multiple_causes.html  edit_shift.html  end_shift.html  error.html  extendShift.html  finish.html  history.html  homescreen.html  incomplete_shift.html  index-MLT-22-130.html  index.html  login.html  mock_bit.html  one_shift_history.html  password.html  planned_shift.html  range_of_days.html  record_multiple_causes.html  record_start.html  record_start_success.html  record_stop.html  shift_log.html  (+4 more)
(+8 files in other folders)
