[project]
name = "matrix-data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tommy Vandermolen", email = "tvandermolen@matrixdesignllc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
]

[project.scripts]
matrix-data-collection = "matrix_data_collection:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.6",
]
